--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.logo {
+  height: 5em;
+  width:15em;
+  margin-left: -4em;
   pointer-events: none;
 }
 
@@ -12,7 +14,6 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
