--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ img {
   margin-left: 1.5em;
   display: grid;
 }
-/* .card-container{
+/* article{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
