--- a/src/App.css
+++ b/src/App.css
@@ -1,62 +1,9 @@
-.App {
-  text-align: center;
-}
 
-.App .dark{
-  --font-color: rgb(255, 255, 255);
-  --background: rgb(50, 50, 50);
-  --background--light: rgb(80, 80, 80);
-  transition: all 0.3s;
-}
-.logo {
-  height: 3.2em;
-  width:5em;
-  margin-left: -4em;
-  pointer-events: none;
-  border-radius: 50em;
-  animation: App-logo-spin infinite 5s linear;
-}
-.theme-btn{
-  background-color: rgb(237, 229, 13);
-  border-radius: 1.5em;
-  height: 2em;
-  width: 6em;
-  border: black solid 1px;
-}
-
-Nav.Link :hover{
-color: #476a2e;
-}
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
+/* 
+====== 
+Variables 
+======
+*/
 :root {
   --primaryLightColor: #d4e6a5;
   --primaryColor: #476a2e;
@@ -119,25 +66,15 @@ a {
   color: var(--mainBlack);
 }
 img {
-  width: 40%;
-  height: 60vh;
-  margin-left: 1.5em;
-  display: grid;
+  width: 100%;
+  display: block;
 }
-/* article{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
-  margin-top: 1em;
-} */
 
 /* 
 ====== 
 Buttons 
 ======
 */
-
 .btn,
 .btn-white,
 .btn-primary {
@@ -230,7 +167,12 @@ Navbar
   color: var(--primaryColor);
 }
 .logo {
-  width: 12rem;
+  height: 3.2em;
+  width:5em;
+  margin-left: -4em;
+  pointer-events: none;
+  border-radius: 50em;
+  animation: App-logo-spin infinite 10s linear;
 }
 /* 
 ====== 
@@ -303,14 +245,19 @@ Cocktail
   box-shadow: var(--lightShadow);
   transition: var(--mainTransition);
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+  width: 80%;
+  gap: 5em;
+  height: 20em;
+  grid-template-rows: 3 1fr;
   border-radius: var(--mainBorderRadius);
 }
 .cocktail:hover {
   box-shadow: var(--darkShadow);
 }
 .cocktail img {
-  height: 20rem;
+  height: 20em;
   object-fit: cover;
   border-top-left-radius: var(--mainBorderRadius);
   border-top-right-radius: var(--mainBorderRadius);
@@ -380,13 +327,13 @@ Cocktail
   width: var(--smallWidth);
   max-width: var(--fullWidth);
   margin: 0 auto;
-  text-align: left;
+  text-align: justify;
 }
 .drink img {
   border-radius: var(--mainBorderRadius);
 }
 .drink p {
-  font-weight: bold;
+  font-weight: light;
   text-transform: capitalize;
   line-height: 1.8;
 }
